# rag_modulo

./: .actrc  .ansible-lint  .coverage  .coverage.Manavs-MacBook-Pro.local.36389.XNSeFZax  .cursorrules  .dockerignore  .env  .env.act  .env.ci  .env.example  .gitignore  .gitleaks.toml  .linting-progress.json  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .tool-versions  .yamllint  AGENTIC_RAG_MCP_ANALYSIS.md  AGENTS.md  AI_WORKFLOW_SETUP_COMPLETE.md  ASYNC_TEST_FIX_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLI_TEST_OPTIMIZATION.md  CODESPACES_ENV_CONFIGURATION_ISSUE.md  CODE_QUALITY_GUIDE.md  CONTEXT_POLLUTION_ROOT_CAUSE_ANALYSIS.md  CRITICAL_ISSUES_SPRINT.md  CURRENT_ISSUES.md  CUSTOM_VOICE_IMPLEMENTATION_PROGRESS.md  DEBUG_LOGGING_ADDITIONS.md  DEBUG_LOGGING_SUMMARY.md  DEFENSIVE_PROGRAMMING_AUDIT.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_TEST_RESULTS.md  DEVELOPMENT.md  DIMENSION_DEBUG_SUMMARY.md  Dockerfile.backend  (+112 more)
backend/: .coverage.Manavs-MacBook-Pro.local.75201.XJKqTSIx  .dockerignore  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  COMPLETE_E2E_ANALYSIS.md  DATABASE_SCHEMA_UPDATES.md  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.codeengine  Dockerfile.dev  Dockerfile.test  Dockerfile.test.dockerignore  ELEVENLABS_INTEGRATION_COMPLETE.md  MERGE_FAILURES_ANALYSIS_AND_FIXES.md  SETTINGS_MIGRATION_PLAN.md  TDD_RED_PHASE_ANALYSIS.md  TDD_RED_PHASE_CHAT_CONVERSATION_SUMMARY.md  TDD_RED_PHASE_PODCAST.md  TESTING_PYRAMID_REFACTORING_SUMMARY.md  TEST_MARKER_AUDIT_REPORT.md  TEST_REORGANIZATION_COMPLETE.md  TOKEN_TRACKING_IMPLEMENTATION_PLAN.md  VOICE_FEATURE_COMPLETION_SUMMARY.md  check_document_content.py  check_template.py  debug_milvus.py  debug_model_config.py  debug_retrieval.py  debug_token_tracking.py  embedding_model_comparison_results.json  fix_all_schema_errors.py  fix_database_schema.py  fix_enum_migration.py  fix_rag_template.py  fix_remaining_schemas.py  fix_test_markers.py  fix_test_schemas.py  fixture_analysis_report.md  (+23 more)
backend/auth/: oidc.py
backend/ci_cd/: __init__.py  adaptive_health_checker.py  database_isolation_manager.py  dependency_retry_manager.py  environment_validator.py  github_actions_validator.py  health_checker.py  race_condition_detector.py  test_isolation_validator.py  timeout_manager.py  timeout_retry_handler.py
backend/cli/: README.md  __init__.py  search_test.py  utils.py
backend/core/: auth_middleware.py  authentication_middleware.py  authorization.py  config.py  custom_exceptions.py  enhanced_logging.py  enhanced_logging_example.py  identity_service.py  log_storage_service.py  logging_context.py  logging_utils.py  loggingcors_middleware.py  mock_auth.py  mock_user_init.py  request_context.py  spiffe_auth.py
backend/dev_tests/: README.md  create_rag_template.py  create_reranking_template.py  debug_chunking_embedding.py  debug_retrieval_issue.py  embedding_model_comparison_results.json  list_collections.py  list_watsonx_models.py  test_docling_chunking.py  test_embedding_comparison.py  test_embedding_limits.py  test_entity_extraction_demo.py  test_granite_embeddings.py  test_milvus_direct_embedding.py  test_reranking_debug.py  test_reranking_impact.py  test_retrieval_ranking.py  update_env_conservative_chunks.py  verify_chunk_tokens.py
backend/issues/: epic-001-agent-orchestration.md  epic-002-workflow-engine.md
backend/logs/: rag_modulo.log.1  rag_modulo.log.2  rag_modulo.log.4
backend/mcp_server/: __init__.py  __main__.py  auth.py  middleware.py  permissions.py  resources.py  server.py  tools.py  types.py
backend/rag_solution/: AGENTS.md  doc_utils.py
backend/scripts/: README.md  add_type_annotations.py  analyze_test_duplicates.py  check_datetime_imports.py  check_uuid_imports.py  cleanup_all_problematic_tests.py  cleanup_e2e_tests.py  cleanup_integration_tests.py  consolidate_test_duplicates.py  create_mock_user.py  fix_all_tests.py  fix_datetime_imports.py  fix_integration_tests.py  fix_remaining_lint_issues.py  fix_remaining_tests.py  fix_syntax_errors.py  fix_test_quality.py  fix_unit_tests.py  restore_database.py  wipe_database.py
backend/test_data/: search_queries.json
backend/tests/: PODCAST_DURATION_CONTROL_ANALYSIS.md  README.md  categorize_tests.py  conftest.py  e2e_refactoring_report.md  test_watsonx.py  (+18 more)
(+1716 files in other folders)
