[tool.poetry]
name = "rag-modulo"
version = "0.1.0"
description = "A modular, agentic RAG which allows selection of embeddings, vector dbs, chunking strategy, etc."
authors = ["Manav Gupta <manavgup@ca.ibm.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.4"
config = "0.5.1"
genai = "2.1.0"
ibm-watson-machine-learning = "1.0.356"
pinecone = "4.0.0"
python-dotenv = "1.0.1"
requests = "2.31.0"
streamlit = "1.31.1"
mypy = "^1.0.0"
mypy-extensions = "^1.0.0"
pyyaml = "^6.0.1"
marshmallow = "^3.21.3"
ibm-generative-ai = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
