[tool.poetry]
name = "rag-modulo"
version = "0.1.0"
description = "A modular, agentic RAG which allows selection of embeddings, vector dbs, chunking strategy, etc."
authors = ["Manav Gupta <manavgup@ca.ibm.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.1"
uvicorn = ">=0.18.3"
pydantic = "^2.8.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
marshmallow = "^3.21.3"
chromadb = "^0.5.0"
ibm_watson_machine_learning = "^1.0.359"
pinecone = "^4.0.0"
pymilvus = "*"
pymupdf = "^1.24.7"
scikit-learn = "^1.5.1"
streamlit = "^1.36.0"
weaviate-client = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"